[package]
name = "morphic"
version = "0.1.0"
authors = ["William Brandon", "Wilson Berkow", "Frank Dai", "Benjamin Driscoll"]
description = "Pure functional programming with whole-program memory management inference"
edition = "2018"
build = "build.rs"

[build-dependencies]
find_clang = { path = "./find_clang" }
anyhow = "1.0.66"
lalrpop = "0.20.0"
walkdir = "2.3.2"

[dependencies]
find_clang = { path = "./find_clang" }
lalrpop-util = "0.20.0"
im-rc = "15.1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
stacker = "0.1.15"
better-panic = "0.3.0"
clap = { version = "2.33.4", features = ["color"] }
cc = "1.0.73"
tempfile = "3.3.0"
crossbeam-channel = "0.5.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "776d78712b6d8180d6bbad55467e6307cd58aeb8", features = [
    "llvm16-0",
] }
ansi_term = "0.12.1"
textwrap = "0.15.1"
json = "0.12.4" # used for string escaping in profile report generation
indicatif = "0.17.1"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# RNG used for procedurally (but deterministically) generating test inputs
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"

[workspace]
members = ["benchmark", "find_clang"]
