[package]
name = "benchmark"
version = "0.1.0"
authors = ["William Brandon <williambrandon@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morphic = { path = ".." }
find_clang = { path = "../find_clang" }
criterion = { git = "https://github.com/morphic-lang/criterion.rs", tag = "default-cli-mode-funcs" }
tempfile = "3.1.0"
serde = "1.0.11"
serde_json = "1.0.53"
rand = { version = "0.8", features = [ "std" ] }
rand_pcg = "0.3"
