[package]
name = "benchmark"
version = "0.1.0"
authors = ["Anonymized"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morphic = { path = ".." }
find_clang = { path = "../find_clang" }
tempfile = "3.3.0"
serde = { version = "1.0.145", features = [ "derive" ]}
serde_json = "1.0.87"
rand = { version = "0.8.5", features = [ "std" ] }
rand_pcg = "0.3"
