[package]
name = "benchmark"
version = "0.1.0"
authors = ["William Brandon"]
edition = "2021"

[dependencies]
morphic = { path = ".." }
find_clang = { path = "../find_clang" }
tempfile = "3.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = { version = "0.8.5", features = ["std"] }
rand_pcg = "0.3.1"
