[package]
name = "benchmark"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
morphic_compiler.workspace = true
find_clang.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_pcg.workspace = true
