[package]
name = "morphic_backend"
version = "0.1.0"
build = "build.rs"
authors.workspace = true
description.workspace = true
edition.workspace = true

[build-dependencies]
anyhow.workspace = true
find_tool.workspace = true
walkdir.workspace = true

[dependencies]
find_tool.workspace = true
morphic_common.workspace = true
inkwell.workspace = true
json.workspace = true
id_collections.workspace = true
id_graph_sccs.workspace = true
once_cell.workspace = true
im-rc.workspace = true
stacker.workspace = true
thiserror.workspace = true
tempfile.workspace = true
