[package]
name = "morphic_common"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
find_tool.workspace = true
morphic_macros.workspace = true
inkwell.workspace = true
indicatif.workspace = true
id_collections.workspace = true
id_graph_sccs.workspace = true
im-rc.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
num-traits.workspace = true
thiserror.workspace = true
once_cell.workspace = true
textwrap.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
