[package]
name = "morphic_compiler"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
morphic_backend.workspace = true
morphic_common.workspace = true
morphic_frontend.workspace = true
clap.workspace = true
inkwell.workspace = true
better-panic.workspace = true
